@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 78375ea57e7b2dcc44c3714355a204af5d40ccd6 ChangeLog
+SHA1 1975bd981abe58b145326e1667a38f4be590d245 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 8a3183831a92def121b1ed2ad83e79857c93dd00 META.yml
-SHA1 12bfa77eba3f886b15c57063178690e81c8882ba MYMETA.json
-SHA1 d4731d4de0ca9afaca89ef989e5c89c125eec186 MYMETA.yml
-SHA1 b8abbd3e22eaf1b6a76fc353df7948f209aa3cab Makefile.PL
+SHA1 26476da5aac7204acc479e4e0179ca8cb48f4aa8 META.yml
+SHA1 40a638d7be32926a78285cf649eb4d84735f2552 MYMETA.json
+SHA1 56d481c9f890e2582891980cd016c1dfe4c7b8fb MYMETA.yml
+SHA1 678667655143925b4c6a4a9ae955bb75e2a52ec2 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 052ff97d8ac09faeb964b95daa33cd4b9df312b6 lib/Net/FullAuto.pm
+SHA1 fd082c1e181f6ebccc4fc512b13cb39f680ae078 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEW7tsACgkQJM3IZYB6aOocFgCfZunJzaQZpy4Qm2VJFe/FgHnO
-iXcAn3IACwwV1cNpVR5iSgTpTg4v9W5w
-=U5G0
+iEYEARECAAYFAlEX7e8ACgkQJM3IZYB6aOqOQgCfZqjDjBoRGrtG0yrY3NGcYajt
+3ukAn3hhkQZntSoWO4ToRTvoSUU4Bcnj
+=beQq
 -----END PGP SIGNATURE-----
