@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999993';
+our $VERSION='0.999994';
 
 
 use 5.005;
